src/objects/Prior_Authorization__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Approval__c</fullName>
        <label>Date of Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Auth_Desc__c</fullName>
        <label>Prior Auth Desc.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prior_Auth_Ref__c</fullName>
        <displayFormat>PC#{0000}</displayFormat>
        <label>Prior Auth Ref.</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Prior_Auth__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prior Authorizations</relationshipLabel>
        <relationshipName>Prior_Authorizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Prior Authorization</label>
    <nameField>
        <label>Prior Authorization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prior Authorizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>